--- a/Jwt/App.xaml
+++ b/Jwt/App.xaml
@@ -1,5 +1,9 @@
 ﻿<Application x:Class="Jwt.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+             xmlns:local="clr-namespace:Jwt"
              StartupUri="Views\MainWindow.xaml">
+    <Application.Resources>
+         
+    </Application.Resources>
 </Application>
